--- a/robert_ardeleanu_portfolio/index.html
+++ b/robert_ardeleanu_portfolio/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>TRIBΞHOLZ</title>
+    <meta name="author" content="Robert Ardeleanu">
+    <meta name="description" content="Personal Portfolio Website of Robert Ardeleanu">
   </head>
   <body>
     <div id="app"></div>
