added some stuff

--- a/robert_ardeleanu_portfolio/index.html
+++ b/robert_ardeleanu_portfolio/index.html
@@ -7,6 +7,9 @@
     <title>TRIBΞHOLZ</title>
     <meta name="author" content="Robert Ardeleanu">
     <meta name="description" content="Personal Portfolio Website of Robert Ardeleanu">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wdth,wght@125,100..800&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
