--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       name="description"
       content="Personal Portfolio Website of Robert Ardeleanu"
     />
+    <link
+      href="https://cdn.jsdelivr.net/gh/PrismJS/prism-themes/themes/prism-atom-dark.css"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
